<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Lhaslo"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:hint="@string/Lhaslo"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Llogin" />

    <Button
        android:id="@+id/Lzarejestrujsie"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/Lrejestracja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lzaloguj" />

    <Button
        android:id="@+id/Lzaloguj"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="28dp"
        android:text="@string/Llogowanie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lhaslo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Llogin"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="168dp"
        android:hint="@string/Llogin"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
